# udacity-robotics

./: .gitignore  README.md
p1_myworld/: CMakeLists.txt  Makefile  README.md
p1_myworld/apartment/: model.sdf
p1_myworld/bigwheel/: model.config
p1_myworld/model/bigwheel/: model.sdf
p1_myworld/script/: hello.cc
p1_myworld/world/: hello.world  myworld
p2_chase_it/: Makefile  README.md
p2_chase_it/catkin_ws/src/my_robot/launch/: robot_description.launch  world.launch
p2_chase_it/catkin_ws/src/my_robot/worlds/: empty.world
p2_chase_it/src/ball_chaser/: CMakeLists.txt  package.xml
p2_chase_it/src/ball_chaser/launch/: ball_chaser.launch
p2_chase_it/src/ball_chaser/src/: drive_bot.cc  drive_bot.h  process_image.cc  process_image.h
p2_chase_it/src/my_robot/: package.xml
p2_chase_it/src/my_robot/launch/: world.launch
p2_chase_it/src/my_robot/models/my_ball/: model.sdf
p2_chase_it/src/my_robot/urdf/: my_robot.xacro
p2_chase_it/src/my_robot/worlds/: sugar.world
